# pysumix

./: .gitignore  .travis.yml  README.md  README.rst  demosaic.py  demosaic_file.py  main.py  optional-requirements.txt  pyproject.toml  requirements.txt  rgb2gray.py  setup.cfg  setup.py  sumix_demo.py  sumixapi.py  test.py  test_demosaic.py
.github/workflows/: ci.yml
examples/: demosaic_file.py  sumix_demo.py
pysumix/: __init__.py  demosaic.py  framegrabber.py  imgutil.py  rgb2gray.py  sumixapi.py
scripts/: sumix_demo.py
src/pysumix/: __init__.py  api.py  demosaic.py  rgb2gray.py
src/pysumix/tests/: test_all.py
test/: test.py
tests/: test.py  test_all.py
