[build-system]
requires = ["setuptools>=66.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysumix"
version = "1.0.0"
description = "Sumix SMX API and data writing and live display"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["camera", "scientific imaging", "Sumix"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: Science/Research",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = ["tifffile", "numpy", "scipy", "imageio"]

[project.optional-dependencies]
tests = ["pytest", "mypy"]

[tool.black]
line-length = 99

[tool.mypy]
files = ["."]
exclude = "(^|/)build/"
ignore_missing_imports = true
