[metadata]
name = pysumix
version = 0.6.0
author = Michael Hirsch, Ph.D.
description = Sumix SMX API and data writing and live display
url = https://github.com/scivision/pysumix
keywords =
  camera
  scientific imaging
  Sumix
  monochrome
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Medical Science Apps.
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  tifffile
  numpy
  scipy
  imageio

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
